<resources>
    <!--Common Strings-->
    <string name="app_name">Evermore Bakery</string>
    <string name="image">Image</string>

    <!--Start Strings-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_annotation">Email Annotation</string>
    <string name="password">Password</string>
    <string name="password_annotation">Password Annotation</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_annotation">Confirm Annotation</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_account">Remember Account</string>
    <string name="create_account">Don\'t Have an Account? Create Now</string>
    <string name="already_account">Already Have an Account? Login Instead</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="quote">Quote</string>
    <string name="open_quote">I Had A Feeling So <font color="#ffff8f">Peculiar</font>\nThat\'s This Love Would Be <font color="#ffff8f">Evermore</font></string>
    <string name="s_continue">Continue</string>

    <!--Navigation Strings-->
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!--Main Strings-->
    <string name="main_subtitle">I Had A Feeling</string>

    <!--Home Strings-->
    <string name="revisit_orders">Revisit your orders</string>
    <string name="week_recommendations">This week\'s recommendations</string>
    <string name="chef_delights">Chef\'s delights</string>

    <!--Menu Strings-->
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>

    <!--Profile Strings-->
    <string name="edit_avatar">Edit Avatar</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update_account">Update Account</string>
    <string name="confirm_update">Confirm Update</string>

    <!--Details Strings-->
    <string name="flavor">Flavor</string>
    <string name="comment">Comment</string>
    <string name="description">Description</string>
    <string name="description_area">Description Area</string>
    <string name="total_price">Total Price</string>
    <string name="total_price_number">100.000.000 VND</string>
    <string name="decrease">-</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_number">1</string>
    <string name="increase">+</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="details">Details</string>
    <string name="account">Account</string>
    <string name="product_comments">Product Comments</string>
    <string name="write_comment">Write Comment</string>

    <!--Checkout Strings-->
    <string name="checkout">Checkout</string>
    <string name="offer">Offer</string>
    <string name="offer_code">Offer Code</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="order_money">450.000 VNĐ</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="address_details">Evermore Street</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>

    <!--Payment Strings-->
    <string name="payment">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="vnpay">VnPay</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="pay_now">Pay Now</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder">Card Holder</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="annotation">Annotation</string>

    <!--Success Strings-->
    <string name="success">Success</string>
    <string name="track_order">Track Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="success_message">Your Order Has Been Placed!\nThanks For Shopping With Us</string>

    <!--Notification Strings-->
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="clear_all">Clear All</string>
    <string name="check_delivery">Check Delivery</string>
    <string name="time">Time</string>

    <!--Delivery Strings-->
    <string name="order_id">OR123</string>
    <string name="date">Date</string>
    <string name="date_sample">June 17th, 2024</string>
    <string name="order_received">Order Received</string>
    <string name="order_baked">Order Baked</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_arrived">Order Arrived</string>

    <string name="default_web_client_id">286234752290-ii6ur6vcssma2a2o49as1m2t2tqtnlnl.apps.googleusercontent.com</string>

</resources>