<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="10dp"
    android:background="@color/light_apricot"
>

    <androidx.cardview.widget.CardView
        android:id="@+id/vCard_dCart_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
    >

        <ImageView
            android:id="@+id/vImage_dCart_Image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ImageContrastCheck"
        />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/vText_dCart_Name"
        style="@style/TextViewDisplayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/vCard_dCart_Card"
        android:text="@string/name"
    />

    <TextView
        android:id="@+id/vText_dCart_Price"
        style="@style/TextViewDisplaySubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/vCard_dCart_Card"
        android:layout_below="@id/vText_dCart_Name"
        android:layout_marginTop="10dp"
        android:text="@string/price"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uButton_dCart_Decrease"
        style="@style/ButtonValue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/vText_dCart_Price"
        android:layout_toStartOf="@+id/vText_dCart_Quantity"
        android:layout_marginTop="20dp"
        android:text="@string/decrease"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck"
        />

    <TextView
        android:id="@+id/vText_dCart_Quantity"
        style="@style/TextViewMedium"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/vText_dCart_Price"
        android:layout_toStartOf="@+id/uButton_dCart_Increase"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/quantity_number"
        tools:ignore="TextSizeCheck"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uButton_dCart_Increase"
        style="@style/ButtonValue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/vText_dCart_Price"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/increase"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck"
    />

</RelativeLayout>