<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/desert_sand"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
        />

        <EditText
            android:id="@+id/uText_fLogin_Email"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,VisualLintTextFieldSize"
        />

        <TextView
            android:id="@+id/vText_fLogin_EmailAnnotation"
            style="@style/TextViewAnnotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/email_annotation"
            tools:ignore="RtlHardcoded,TextContrastCheck"
        />

        <EditText
            android:id="@+id/uText_fLogin_Password"
            style="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/show"
            android:hint="@string/password"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="LabelFor,VisualLintTextFieldSize"
        />

        <TextView
            android:id="@+id/vText_fLogin_PasswordAnnotation"
            style="@style/TextViewAnnotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/password_annotation"
            tools:ignore="RtlHardcoded,TextContrastCheck"
        />

        <Button
            android:id="@+id/uButton_fLogin_Login"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            tools:ignore="TextContrastCheck,VisualLintButtonSize"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
        >

            <TextView
                android:id="@+id/vText_fLogin_Recover"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
            />

            <TextView
                android:id="@+id/vText_fLogin_Register"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/register"
                tools:ignore="RelativeOverlap"
            />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>