<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:padding="10dp"
    tools:ignore="TextSizeCheck"
>

    <androidx.cardview.widget.CardView
        android:id="@+id/vCard_dCheckout_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/vImage_dCheckout_Image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" 
        />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/vText_dCheckout_Name"
        style="@style/TextViewDisplayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/vCard_dCheckout_Card"
        android:text="@string/name" 
    />

    <TextView
        android:id="@+id/vText_dCheckout_Price"
        style="@style/TextViewFaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vText_dCheckout_Name"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/vCard_dCheckout_Card"
        android:text="@string/price"
        tools:ignore="TextContrastCheck" 
    />

    <TextView
        android:id="@+id/vText_dCheckout_Quantity"
        style="@style/TextViewFaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vText_dCheckout_Price"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/vCard_dCheckout_Card"
        android:text="@string/quantity"
        tools:ignore="TextContrastCheck" 
    />

</RelativeLayout>